# shipsafe-routeforge

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  skills-lock.json
agent/: ais_stream.py  config.py  critic.py  gemini_client.py  mcp_client.py  orchestrator.py  pipeline_log.py  scenario_store.py  webhooks.py
agent/specialists/: changelog_writer.py  chat_handler.py  code_context_analyzer.py  commit_watcher.py  inline_commenter.py  pipeline_observer.py  risk_gate.py  scenario_tester.py
cli/: package-lock.json  package.json
cli/src/: cli.mjs  oauth.mjs
cli/src/commands/: init.mjs  status.mjs
dashboard/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: ChatPanel.tsx  DiffViewer.tsx  ModelSelector.tsx  PipelineLog.tsx  ScenarioEditor.tsx  StatsBar.tsx  TrendPanel.tsx  VerdictFeed.tsx
docs/: DEVPOST.md
fixtures/: claims_routing.json  fraud_detection.json  hormuz_crisis.json
terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf
tests/: test_critic.py  test_features.py  test_webhooks.py
tests/specialists/: test_changelog_writer.py  test_chat_handler.py  test_code_context_analyzer.py  test_commit_watcher.py  test_pipeline_observer.py  test_risk_gate.py  test_scenario_tester.py
