[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shipsafe-routeforge"
version = "0.1.0"
description = "RouteForge — AI safety gate for GitLab merge requests"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-aiplatform>=1.49.0",
    "google-adk>=1.0.0",
    "google-cloud-secret-manager>=2.20.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "structlog>=24.1.0",
    "shipsafe-shared @ git+https://github.com/shipsafe-ai/shipsafe-shared.git@v0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "respx>=0.21.0",
    "coverage>=7.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["agent"]
omit = ["tests/*"]

[tool.hatch.metadata]
allow-direct-references = true
